--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@fortawesome/angular-fontawesome": "^0.13.0",
     "@fortawesome/fontawesome-svg-core": "^6.4.2",
     "@fortawesome/free-solid-svg-icons": "^6.4.2",
+    "@ng-select/ng-select": "^11.1.1",
     "@sweetalert2/ngx-sweetalert2": "^12.2.0",
     "ngx-highlightjs": "^10.0.0",
     "ngx-toastr": "^17.0.2",
